--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,52 @@
 version: '3.3'
 services:
 
+  db:
+    image: postgres:13.0-alpine
+    restart: always
+    volumes:
+      - db_value:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  backend:
+    build: ../backend/
+    restart: always
+    volumes:
+      - static_value:/backend/static/
+      - media_value:/backend/media/
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+    
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: v4lerdon/foodgram_front:latest
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+    env_file:
+      - ./.env
+
   nginx:
     image: nginx:1.19.3
+    restart: always
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/backend/static/
+      - media_value:/backend/media/
+    depends_on:
+      - backend
+      - frontend
+
+volumes:
+  db_value:
+  static_value:
+  media_value:
