--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,26 @@
 server {
     listen 80;
+    server_tokens off;
+    # server_name 84.252.142.106, localhost, 127.0.0.1;
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+    location /static/ {
+        autoindex on;
+        alias /backend/static/;
+    }
+    location /media/ {
+        autoindex on;
+        alias /backend/media/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
