--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -12,9 +12,8 @@ server {
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
     }
-    location /static/ {
-        autoindex on;
-        alias /backend/static/;
+    location /static/admin/ {
+        alias /var/html/static/admin/;
     }
     location /media/ {
         autoindex on;
