--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -27,7 +27,7 @@ jobs:
     name: Push Docker image to Docker Hub
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
-    needs: tests
+    needs: push_on_github_and_tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 
