--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,6 @@ WORKDIR /backend
 
 COPY . .
 
-RUN pip3 install -r requirements.txt --no-cache-dir
+RUN pip3 install -r /backend/requirements.txt --no-cache-dir
 
 CMD ["gunicorn", "app.wsgi:application", "--bind", "0:8000" ]
