--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -24,7 +24,7 @@ jobs:
         python -m flake8
 
   build_and_push_to_docker_hub_backend:
-    name: Push Docker image to Docker Hub
+    name: Push Docker image backend to Docker Hub
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: push_on_github_and_tests
@@ -45,3 +45,24 @@ jobs:
           push: true
           tags: v4lerdon/foodgram_back:latest
 
+  build_and_push_to_docker_hub_frontend:
+    name: Push Docker image frontend to Docker Hub
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: push_on_github_and_tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2 
+        with:
+          file: frontend/Dockerfile
+          push: true
+          tags: v4lerdon/foodgram_front:latest
