--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -1,6 +1,5 @@
 name: foodgram_workflow
 
-
 on: [push]
 
 jobs:
@@ -45,24 +44,26 @@ jobs:
           push: true
           tags: v4lerdon/foodgram_back:latest
 
-  build_and_push_to_docker_hub_frontend:
-    name: Push Docker image frontend to Docker Hub
-    if: github.ref == 'refs/heads/master'
+  deploy:
     runs-on: ubuntu-latest
-    needs: push_on_github_and_tests
+    needs: build_and_push_to_docker_hub
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2 
-        with:
-          file: frontend/Dockerfile
-          push: true
-          tags: v4lerdon/foodgram_front:latest
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        script: |
+            sudo docker-compose stop
+            sudo docker-compose rm web
+            sudo docker pull
+            touch .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose up -d
