--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -55,11 +55,12 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
+        stack_file_name: docker-compose.yaml
         script: |
-            sudo docker-compose stop
-            sudo docker-compose rm backend
             sudo docker pull $v4lerdon/foodgram_back:latest
             sudo docker pull $v4lerdon/foodgram_front:latest
+            sudo docker-compose stop
+            sudo docker-compose rm backend
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
