--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,9 @@
 FROM python:3.7-slim
 
-RUN mkdir /backend
-
-COPY /backend /backend
-
 WORKDIR /backend
 
-RUN pip install -r requirements.txt --no-cache-dir
+COPY . .
+
+RUN pip install --upgrade pip && pip install -r /backend/requirements.txt
 
 CMD ["gunicorn", "app.wsgi:application", "--bind", "0:8000" ]
