--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /backend
 
 COPY . .
 
-RUN pip install --upgrade pip && pip install -r /backend/requirements.txt
+RUN pip install --upgrade pip && pip install -r backend/requirements.txt
 
 CMD ["gunicorn", "app.wsgi:application", "--bind", "0:8000" ]
