--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3.7-slim
 
 WORKDIR /backend
 
-COPY . .
+COPY requirements.txt .
 
-RUN pip install --upgrade pip && pip install -r backend/requirements.txt
+RUN pip install --upgrade pip && pip install -r requirements.txt
+
+COPY . .
 
 CMD ["gunicorn", "app.wsgi:application", "--bind", "0:8000" ]
