--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -55,6 +55,7 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
+        stack_file_name: docker-compose.yml
         script: |
             sudo docker pull $v4lerdon/foodgram_back:latest
             sudo docker pull $v4lerdon/foodgram_front:latest
