--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,8 @@ FROM python:3.7-slim
 
 WORKDIR /backend
 
-COPY requirements.txt .
+COPY backend .
 
 RUN pip install --upgrade pip && pip install -r requirements.txt
-
-COPY . .
 
 CMD ["gunicorn", "app.wsgi:application", "--bind", "0:8000" ]
