--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_tokens off;
-    # server_name 84.252.142.106, localhost, 127.0.0.1;
+    server_name 84.252.142.106, localhost, 127.0.0.1;
 
     location /api/ {
         proxy_set_header        Host $host;
