--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,6 +3,11 @@ server {
     server_tokens off;
     server_name 84.252.142.106, localhost, 127.0.0.1;
 
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
+
     location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
@@ -17,13 +22,9 @@ server {
     }
     location /media/ {
         autoindex on;
-        alias /backend/media/;
+        root /var/html/;
     }
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
